--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "http-errors": "^2.0.0",
+    "mongoose": "^8.0.3",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
