--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
+    "slugify": "^1.6.6",
     "winston": "^3.11.0",
     "xss-clean": "^0.1.4"
   },
