--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
     "xss-clean": "^0.1.4"
   },
